Major Bugs fixed acroos SalonService, Appointments, and Service